does the smooth scroll... 400 lines

--- a/app/assets/stylesheets/associations.css.scss
+++ b/app/assets/stylesheets/associations.css.scss
@@ -3,6 +3,9 @@
   border-color: lightgrey;
   border-style: solid;
   margin-bottom: -1px;
+  &:last-child {
+    display: none;
+  }
   .row {
     padding-top: 10px;
   }
